<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ewellix_tlt</name>
  <version>0.0.0</version>
  <description>The ewellix_tlt package</description>


  <maintainer email="support@generationrobots.com">GR</maintainer>


  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
